feat: add Stacker News to the marketplace

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -165,6 +165,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
+            <a href="https://stacker.news/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/stackernews.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Stacker News</h2>
+                        <p>It's like Hacker News but we pay you Bitcoin</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://kriptode.com/receivesms/index.html?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
