--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -74,6 +74,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
+            <a href="https://fixedfloat.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/fixedfloat.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Fixedfloat</h2>
+                        <p>Lightning crypto exchange</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://silent.link/?utm_source=bluewallet&utm_media=ln">
                 <div class="grid-container">
                     <div class="appicon">
@@ -108,19 +121,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Zigzag</h2>
                         <p>Exchange crypto in seconds with low fees</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://fixedfloat.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/fixedfloat.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Fixedfloat</h2>
-                        <p>Lightning crypto exchange</p>
                     </div>
                 </div>
             </a>
@@ -287,47 +287,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h3>Social</h3>
         </div> <!-- section end -->
         <div class="row"> <!-- start -->
-            <a href="https://microlancer.io/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/lancer.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Microlancer</h2>
-                        <p>A job board for microtasks</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-
-        <div class="row"> <!-- start -->
-            <a href="https://satoshis.place/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/satoshisplace.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Satoshi's Place</h2>
-                        <p>Online collaborative artboard</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-
-        <div class="row"> <!-- start -->
-            <a href="https://tallyco.in/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/tallycoin.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Tallycoin</h2>
-                        <p>Fundraising platform in bitcoin and lightning</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
             <a href="https://lightningnetworkstores.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -341,14 +300,27 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://yalls.org/?utm_source=bluewallet">
+            <a href="https://microlancer.io/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/yalls.png">
+                        <img src="img/lancer.png">
                     </div>
                     <div class="apptext">
-                        <h2>Y'alls</h2>
-                        <p>Read and write articles</p>
+                        <h2>Microlancer</h2>
+                        <p>A job board for microtasks</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://satoshis.place/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/satoshisplace.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Satoshi's Place</h2>
+                        <p>Online collaborative artboard</p>
                     </div>
                 </div>
             </a>
@@ -367,9 +339,65 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://fixedfloat.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/stackernews.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>stacker news</h2>
+                        <p>It's like Hacker News but we pay you Bitcoin.</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://tallyco.in/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/tallycoin.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Tallycoin</h2>
+                        <p>Fundraising platform in bitcoin and lightning</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://yalls.org/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/yalls.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Y'alls</h2>
+                        <p>Read and write articles</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        
         <div class="section"> <!-- section start -->
             <h3>Merchandising</h3>
         </div> <!-- section end -->
+        
+        <div class="row"> <!-- start -->
+            <a href="https://bitcoinshirt.co/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/bitcoinshirt.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Bitcoin shirt</h2>
+                        <p>Cypherpunk and funky Bitcoin merchandise</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
         <div class="row"> <!-- start -->
             <a href="https://www.bitcointunnels.com/?utm_source=bluewallet">
                 <div class="grid-container">
@@ -379,32 +407,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="apptext">
                         <h2>Bitcoin tunnels</h2>
                         <p>Bitcoin products and merchadising</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://www.vonbitcoin.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/brekkie.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Crypto Brekkie</h2>
-                        <p>Brekkie von Bitcoin</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://www.excellion.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/excellion.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>Excellion</h2>
-                        <p>Proof of hat</p>
                     </div>
                 </div>
             </a>
@@ -423,14 +425,69 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://bitcoinshirt.co/?utm_source=bluewallet">
+            <a href="https://www.vonbitcoin.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/bitcoinshirt.png">
+                        <img src="img/brekkie.png">
                     </div>
                     <div class="apptext">
-                        <h2>Bitcoin shirt</h2>
-                        <p>Cypherpunk and funky Bitcoin merchandise</p>
+                        <h2>Crypto Brekkie</h2>
+                        <p>Brekkie von Bitcoin</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://www.excellion.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/excellion.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Excellion</h2>
+                        <p>Proof of hat</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
+            <a href="https://hodlcat.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/holdcat.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>HODLcat</h2>
+                        <p>Merchandise, t-shirts and more</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://layeronebtc.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/layerone.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>layer One</h2>
+                        <p>The Bitcoin store of value</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://lndlife.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lndlife.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LNDlife</h2>
+                        <p>Unique gifts at lightning sized price</p>
                     </div>
                 </div>
             </a>
@@ -450,50 +507,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
 
-        <div class="row"> <!-- start -->
-            <a href="https://hodlcat.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/holdcat.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>HODLcat</h2>
-                        <p>Merchandise, t-shirts and more</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://lndlife.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/lndlife.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>LNDlife</h2>
-                        <p>Unique gifts at lightning sized price</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
-        <div class="row"> <!-- start -->
-            <a href="https://layeronebtc.com/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/layerone.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>layer One</h2>
-                        <p>The Bitcoin store of value</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
+
 
         <div class="section"> <!-- section start -->
             <h3>Books</h3>
         </div> <!-- section end -->
-  <div class="row"> <!-- start -->
+          <div class="row"> <!-- start -->
             <a href="https://qabitcoin.davidcoen.it/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -510,21 +529,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="section"> <!-- section start -->
             <h3>Miscellaneous</h3>
         </div> <!-- section end -->
-        <div class="row"> <!-- start -->
-            <a href="https://ln.pizza/?utm_source=bluewallet">
-                <div class="grid-container">
-                    <div class="appicon">
-                        <img src="img/lnpizza.png">
-                    </div>
-                    <div class="apptext">
-                        <h2>LN Pizza</h2>
-                        <p>Lightning fast delivery, lol</p>
-                    </div>
-                </div>
-            </a>
-        </div> <!-- end -->
 
-        <div class="row"> <!-- start -->
+                <div class="row"> <!-- start -->
             <a href="https://www.chromaticcoffee.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
@@ -538,15 +544,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
 
-         <div class="row"> <!-- start -->
-            <a href="https://vapecrypto.com/?utm_source=bluewallet">
+        <div class="row"> <!-- start -->
+            <a href="https://www.kaffebox.no/scandinavian-nordic-roast-coffee-subscription/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/vape.png">
+                        <img src="img/kaffe.png">
                     </div>
                     <div class="apptext">
-                        <h2>VapeCrypto</h2>
-                        <p>The original bitcoin only vape retailer</p>
+                        <h2>KaffeBox</h2>
+                        <p>Scandinavian roasted coffee beans and chocolate</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+
+        <div class="row"> <!-- start -->
+            <a href="https://ln.pizza/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/lnpizza.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>LN Pizza</h2>
+                        <p>Lightning fast delivery, lol</p>
                     </div>
                 </div>
             </a>
@@ -567,18 +587,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div> <!-- end -->
 
         <div class="row"> <!-- start -->
-            <a href="https://www.kaffebox.no/scandinavian-nordic-roast-coffee-subscription/?utm_source=bluewallet">
+            <a href="https://vapecrypto.com/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="img/kaffe.png">
+                        <img src="img/vape.png">
                     </div>
                     <div class="apptext">
-                        <h2>KaffeBox</h2>
-                        <p>Scandinavian roasted coffee beans and chocolate</p>
+                        <h2>VapeCrypto</h2>
+                        <p>The original bitcoin only vape retailer</p>
                     </div>
                 </div>
             </a>
         </div> <!-- end -->
+
+
 
 </div>
 </body>
